# rosalind

./: .clang-format  .gitignore  Makefile  README.md  meson.build
.github/workflows/: meson_test.yaml
include/: cons.h  gc.h  grph.h  hamm.h  iprb.h  lcsm.h  prot.h  utils.h
src/: cons.c  dna.c  dna.h  fib.c  fib.h  file_utils.c  file_utils.h  gc.c  gc.h  grph.c  grph.h  hamm.c  iprb.c  iprb.h  lcsm.c  main.c  prot.c  revc.c  revc.h  rna.c  rna.h  subs.c  subs.h  utils.c
tests/: smoke_test.sh
